fix: changed some code
