# src/main/resources/static/api-docs.yml
@@ -110,9 +110,9 @@ paths:
       requestBody:
         required: true
         content:
-          application/vnd.kaiqkt_user_update_address_v1+json:
+          application/vnd.kaiqkt_user_address_v1+json:
             schema:
-              $ref: '#/components/schemas/UpdateAddressV1'
+              $ref: '#/components/schemas/AddressV1'
       responses:
         204:
           description: Address updated successfully
@@ -156,7 +156,7 @@ paths:
       requestBody:
         required: true
         content:
-          application/vnd.kaiqkt_user_new_address_v1+json:
+          application/vnd.kaiqkt_user_address_v1+json:
             schema:
               $ref: '#/components/schemas/AddressV1'
       responses:
@@ -558,8 +558,7 @@ components:
           maxLength: 60
         country:
           type: string
-          minLength: 2
-          maxLength: 2
+          minLength: 1
       required:
         - zip_code
         - street
@@ -568,26 +567,6 @@ components:
         - city
         - state
         - country
-
-    UpdateAddressV1:
-      type: object
-      properties:
-        zip_code:
-          type: string
-        street:
-          type: string
-        complement:
-          type: string
-        number:
-          type: string
-        district:
-          type: string
-        city:
-          type: string
-        state:
-          type: string
-        country:
-          type: string
 
     GenreV1:
       type: string
